--------------------------------------------------------------------------------
Changes for 2.0.0rc4

New features:
..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)

Bug fixes:
........S. [ZBX-4893] fixed linking of item applications by a discovery rule (Sasha)
..F....... [ZBX-4649] fixed Editing screen does not work properly after moving content to other cell (Toms)
..F....... [ZBX-4875] fixed graph item with long description cannot be dragged/sorted properly in graph form (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.0rc3

New features:
....I..... [ZBXNEXT-973] redesign of existing templates (Alexei, Sasha)
..F....... [ZBX-4869] added support for nested screens import (Vedmak)
A.F....... [ZBXNEXT-1161] implemented the service API (Pavels)
A.F....... [ZBXNEXT-1126] redesign Script execution (Eduard)
...GI..... [ZBXNEXT-584] added support of multiple server in active check mode; thanks to Takanori Suzuki (Sasha)
..F.I..... [ZBX-3721] design improvements (Pavels)
A.F....... [ZBXNEXT-908] redesign Configuration->Host->Graphs (Eduard)
..F....... [ZBX-4738] improved the host interface select in the item mass update form (Pavels)
...G...... [ZBX-4635] added support for optional first parameter to vfs.dev.* on Solaris (dimir)
..F....... [ZBXNEXT-1153] added support for nested templates in import (Vedmak)
..F....... [ZBX-1357] updated Czech, French, German, Greek, Japanese, Polish, Russian, Spanish and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A.F....... [ZBX-4890] fixed creating hosts by administrators (Pavels)
..F....... [ZBXNEXT-1161] fixed multiple IT service validation issues (Pavels)
.......PS. [ZBX-4793] fixed processing of quoted strings in dynamic SNMP indexes (Sasha)
.......PS. [ZBX-4709] fixed processing of quoted strings in SNMP items (Sasha)
........S. [ZBX-4882] fixed processing of quoted strings in SNMP lld rules (Sasha)